# home_work_4

./: .flake8  README.md  black  flake8  isort  mylog.txt  mypy  pyproject.toml
src/: decorators.py  external_api.py  filter.py  generators.py  main.py  masks.py  mylog.txt  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  decorators.py  mylog.txt  test.csv  test.json  test_decorators.py  test_external_api.py  test_generators.py  test_invalid_file.json  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
